--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bmi-calculator
+  name: calculator
 spec:
   selector:
-    app: bmi-calculator
+    app: calculator
   ports:
     - protocol: TCP
-      port: 80
+      port: 5000
       targetPort: 5000
   type: LoadBalancer
