--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       - name: calculator
-        image: calculator:latest
+        image: bhumika0111/calculator:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 80
         resources:
           requests:
             cpu: "100m"
